# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "pyadvcourse_abb"
description = "Practice package developed as part of a python university course"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "alistair.bell@unibe.ch", name = "Alistair Bell" },
]
dynamic = ["version"]
dependencies = ["numpy", "scipy"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://github.com/alistairbbell/pyadvcourse_abb"
repository = "https://github.com/alistairbbell/pyadvcourse_abb"
